--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="15.jpg" sizes="16x16" type="image/png">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <script src="js/music.js"></script>
+  <script src="script.js"></script>
   <script src="js/hide.js"></script>
 </head>
 <body>
