--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="15.jpg" sizes="16x16" type="image/png">
+  <link rel="icon" href="faisal.jpg" sizes="16x16" type="image/png">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <script src="script.js"></script>
   <script src="js/hide.js"></script>
