--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <script src="script.js"></script>
   <script src="js/hide.js"></script>
 </head>
-<body>
+<body oncontextmenu="return false">
 <script type="text/javascript">
 <!-- HTML Encryption provided by www.webtoolhub.com -->
 <!--
