--- a/index.html
+++ b/index.html
@@ -19,13 +19,70 @@
   <script src="js/hide.js"></script>
 </head>
 <body oncontextmenu="return false">
-<script type="text/javascript">
-<!-- HTML Encryption provided by www.webtoolhub.com -->
-<!--
-document.write(unescape('%3c%64%69%76%20%63%6c%61%73%73%3d%22%6d%61%69%6e%22%3e%0d%0a%20%20%09%3c%70%20%69%64%3d%22%6c%6f%67%6f%22%3e%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%6d%75%73%69%63%22%3e%3c%2f%69%3e%4d%75%73%69%63%3c%2f%70%3e%0d%0a%20%20%20%20%0d%0a%20%20%20%20%3c%21%2d%2d%2d%20%6c%65%66%74%20%70%61%72%74%20%2d%2d%2d%3e%0d%0a%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%6c%65%66%74%22%3e%0d%0a%0d%0a%20%20%20%20%20%20%3c%21%2d%2d%2d%20%73%6f%6e%67%20%69%6d%67%20%2d%2d%2d%3e%0d%0a%20%20%20%20%20%20%3c%69%6d%67%20%69%64%3d%22%74%72%61%63%6b%5f%69%6d%61%67%65%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%76%6f%6c%75%6d%65%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%70%20%69%64%3d%22%76%6f%6c%75%6d%65%5f%73%68%6f%77%22%3e%39%30%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%76%6f%6c%75%6d%65%2d%75%70%22%20%61%72%69%61%2d%68%69%64%64%65%6e%3d%22%74%72%75%65%22%20%6f%6e%63%6c%69%63%6b%3d%22%6d%75%74%65%5f%73%6f%75%6e%64%28%29%22%20%69%64%3d%22%76%6f%6c%75%6d%65%5f%69%63%6f%6e%22%3e%3c%2f%69%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%20%3c%69%6e%70%75%74%20%74%79%70%65%3d%22%72%61%6e%67%65%22%20%6d%69%6e%3d%22%30%22%20%6d%61%78%3d%22%31%30%30%22%20%76%61%6c%75%65%3d%22%39%30%22%20%6f%6e%63%68%61%6e%67%65%3d%22%76%6f%6c%75%6d%65%5f%63%68%61%6e%67%65%28%29%22%20%69%64%3d%22%76%6f%6c%75%6d%65%22%3e%20%20%0d%0a%20%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%0d%0a%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%0d%0a%0d%0a%20%20%20%20%20%3c%21%2d%2d%2d%20%72%69%67%68%74%20%70%61%72%74%20%2d%2d%2d%3e%0d%0a%20%20%09%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%72%69%67%68%74%22%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%73%68%6f%77%5f%73%6f%6e%67%5f%6e%6f%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%70%20%69%64%3d%22%70%72%65%73%65%6e%74%22%3e%31%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%70%3e%2f%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%70%20%69%64%3d%22%74%6f%74%61%6c%22%3e%35%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%3c%21%2d%2d%2d%20%73%6f%6e%67%20%74%69%74%6c%65%20%26%20%61%72%74%69%73%74%20%6e%61%6d%65%20%2d%2d%2d%3e%0d%0a%20%20%20%20%20%20%3c%70%20%69%64%3d%22%74%69%74%6c%65%22%3e%74%69%74%6c%65%2e%6d%70%33%3c%2f%70%3e%0d%0a%20%20%20%20%20%20%3c%70%20%69%64%3d%22%61%72%74%69%73%74%22%3e%41%72%74%69%73%74%20%6e%61%6d%65%3c%2f%70%3e%0d%0a%0d%0a%20%20%20%20%20%20%3c%21%2d%2d%2d%20%6d%69%64%64%6c%65%20%70%61%72%74%20%2d%2d%2d%3e%0d%0a%20%20%09%20%09%3c%64%69%76%20%63%6c%61%73%73%3d%22%6d%69%64%64%6c%65%22%3e%0d%0a%20%20%09%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%20%6f%6e%63%6c%69%63%6b%3d%22%70%72%65%76%69%6f%75%73%5f%73%6f%6e%67%28%29%22%20%69%64%3d%22%70%72%65%22%3e%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%73%74%65%70%2d%62%61%63%6b%77%61%72%64%22%20%61%72%69%61%2d%68%69%64%64%65%6e%3d%22%74%72%75%65%22%3e%3c%2f%69%3e%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%20%20%20%20%20%20%09%20%20%20%3c%62%75%74%74%6f%6e%20%6f%6e%63%6c%69%63%6b%3d%22%6a%75%73%74%70%6c%61%79%28%29%22%20%69%64%3d%22%70%6c%61%79%22%3e%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%70%6c%61%79%22%20%61%72%69%61%2d%68%69%64%64%65%6e%3d%22%74%72%75%65%22%3e%3c%2f%69%3e%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%20%20%09%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%20%6f%6e%63%6c%69%63%6b%3d%22%6e%65%78%74%5f%73%6f%6e%67%28%29%22%20%69%64%3d%22%6e%65%78%74%22%3e%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%73%74%65%70%2d%66%6f%72%77%61%72%64%22%20%61%72%69%61%2d%68%69%64%64%65%6e%3d%22%74%72%75%65%22%3e%3c%2f%69%3e%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%20%20%09%20%20%20%3c%2f%64%69%76%3e%0d%0a%0d%0a%20%20%20%20%20%20%20%3c%21%2d%2d%2d%20%73%6f%6e%67%20%64%75%72%61%74%69%6f%6e%20%70%61%72%74%20%2d%2d%2d%3e%0d%0a%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%64%75%72%61%74%69%6f%6e%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%3c%69%6e%70%75%74%20%74%79%70%65%3d%22%72%61%6e%67%65%22%20%6d%69%6e%3d%22%30%22%20%6d%61%78%3d%22%31%30%30%22%20%76%61%6c%75%65%3d%22%30%22%20%69%64%3d%22%64%75%72%61%74%69%6f%6e%5f%73%6c%69%64%65%72%22%20%6f%6e%63%68%61%6e%67%65%3d%22%63%68%61%6e%67%65%5f%64%75%72%61%74%69%6f%6e%28%29%22%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%20%3c%62%75%74%74%6f%6e%20%69%64%3d%22%61%75%74%6f%22%20%6f%6e%63%6c%69%63%6b%3d%22%61%75%74%6f%70%6c%61%79%5f%73%77%69%74%63%68%28%29%22%3e%41%75%74%6f%20%70%6c%61%79%20%3c%69%20%63%6c%61%73%73%3d%22%66%61%20%66%61%2d%63%69%72%63%6c%65%2d%6f%2d%6e%6f%74%63%68%22%20%61%72%69%61%2d%68%69%64%64%65%6e%3d%22%74%72%75%65%22%3e%3c%2f%69%3e%3c%2f%62%75%74%74%6f%6e%3e%0d%0a%20%20%09%3c%2f%64%69%76%3e%0d%0a%0d%0a%0d%0a%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%3c%66%6f%6f%74%65%72%3e%0d%0a%20%20%20%20%3c%62%72%3e%0d%0a%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%6d%61%69%6e%2d%63%6f%6e%74%65%6e%74%22%3e%0d%0a%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%6c%65%66%74%20%62%6f%78%22%3e%20%20%20%20%20%20%20%20%20%0d%0a%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%63%6f%6e%74%65%6e%74%22%3e%0d%0a%20%20%20%20%20%20%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%73%6f%63%69%61%6c%22%3e%0d%0a%20%20%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%20%20%3c%64%69%76%20%63%6c%61%73%73%3d%22%66%61%69%73%61%6c%22%3e%0d%0a%20%20%20%20%20%20%3c%63%65%6e%74%65%72%3e%0d%0a%20%20%20%20%20%20%20%20%3c%73%70%61%6e%20%63%6c%61%73%73%3d%22%63%72%65%64%69%74%22%3e%4d%44%20%46%41%49%53%41%4c%20%48%4f%53%53%41%49%4e%20%7c%20%3c%2f%73%70%61%6e%3e%3c%61%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%61%69%73%61%6c%34%31%33%2e%67%69%74%68%75%62%2e%69%6f%2f%70%72%6f%66%69%6c%65%2f%22%74%61%72%67%65%74%3d%22%5f%62%6c%61%6e%6b%22%3e%41%42%4f%55%54%20%55%53%20%7c%20%3c%2f%61%3e%3c%61%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%66%61%69%73%61%6c%34%31%33%2e%67%69%74%68%75%62%2e%69%6f%2f%43%6f%6e%74%61%63%74%2f%22%74%61%72%67%65%74%3d%22%5f%62%6c%61%6e%6b%22%3e%43%4f%4e%54%41%43%54%20%55%53%20%7c%20%3c%2f%61%3e%3c%61%20%68%72%65%66%3d%22%68%74%74%70%73%3a%2f%2f%77%77%77%2e%70%72%69%76%61%63%79%70%6f%6c%69%63%79%67%65%6e%65%72%61%74%6f%72%2e%69%6e%66%6f%2f%6c%69%76%65%2e%70%68%70%3f%74%6f%6b%65%6e%3d%42%6c%63%39%78%4a%66%46%78%4a%56%31%37%4e%78%65%79%4a%6a%62%42%71%63%78%33%67%5a%6c%65%4a%78%64%22%74%61%72%67%65%74%3d%22%5f%62%6c%61%6e%6b%22%3e%20%50%52%49%56%41%43%59%20%50%4f%4c%49%43%59%20%7c%20%3c%2f%61%3e%3c%2f%73%70%61%6e%3e%0d%0a%20%20%20%20%20%20%20%a9%20%32%30%32%30%2d%32%30%32%31%20%41%6c%6c%20%72%69%67%68%74%73%20%72%65%73%65%72%76%65%64%2e%3c%2f%73%70%61%6e%3e%0d%0a%20%20%20%20%20%20%3c%2f%63%65%6e%74%65%72%3e%0d%0a%20%20%20%20%3c%2f%64%69%76%3e%0d%0a%20%20%3c%2f%66%6f%6f%74%65%72%3e'));
-//-->
-</script>
+  <div class="main">
+  	<p id="logo"><i class="fa fa-music"></i>Music</p>
+    
+    <!--- left part --->
+     <div class="left">
 
+      <!--- song img --->
+      <img id="track_image">
+         <div class="volume">
+            <p id="volume_show">90</p>
+            <i class="fa fa-volume-up" aria-hidden="true" onclick="mute_sound()" id="volume_icon"></i>
+            <input type="range" min="0" max="100" value="90" onchange="volume_change()" id="volume">  
+         </div>
+
+     </div>
+ 
+
+     <!--- right part --->
+  	 <div class="right">
+
+        <div class="show_song_no">
+          <p id="present">1</p>
+          <p>/</p>
+          <p id="total">5</p>
+        </div>
+
+       <!--- song title & artist name --->
+      <p id="title">title.mp3</p>
+      <p id="artist">Artist name</p>
+
+      <!--- middle part --->
+  	 	<div class="middle">
+  	       <button onclick="previous_song()" id="pre"><i class="fa fa-step-backward" aria-hidden="true"></i></button>
+      	   <button onclick="justplay()" id="play"><i class="fa fa-play" aria-hidden="true"></i></button>
+  	       <button onclick="next_song()" id="next"><i class="fa fa-step-forward" aria-hidden="true"></i></button>
+  	   </div>
+
+       <!--- song duration part --->
+        <div class="duration">
+           <input type="range" min="0" max="100" value="0" id="duration_slider" onchange="change_duration()">
+        </div>
+           <button id="auto" onclick="autoplay_switch()">Auto play <i class="fa fa-circle-o-notch" aria-hidden="true"></i></button>
+  	</div>
+
+
+  </div>
+  <footer>
+    <br>
+    <div class="main-content">
+      <div class="left box">         
+        <div class="content">
+          <div class="social">
+        </div>
+      </div>
+    </div>
+    <div class="faisal">
+      <center>
+        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisal413.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://www.privacypolicygenerator.info/live.php?token=Blc9xJfFxJV17NxeyJjbBqcx3gZleJxd"target="_blank"> PRIVACY POLICY | </a> <a href="https://faisal413.github.io/Contact/"target="_blank">CONTACT US | </a></span>
+       © 2020-2021 All rights reserved.</span>
+      </center>
+    </div>
+  </footer>
+  <!--- Add javascript file --->
+  <script src="index.js"></script>
 </body>
 </html>
   
