--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Experienced Data Entry Operator with a demonstrated history of working in the government administration industry. Skilled in Python (programming Language), C# (Programming Language), HTML( Hyper Text Markup Language), CSS (Cascading Style Sheets), JavaScript, Bootstrap(framework), .NET (framework), Unity (game engine), Adobe Photoshop, Adobe Illustrator , logo Making, Graphic Design , video & audio editing, video content Create & Microsoft office.">
-  <meta name="keywords" content="faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisal413,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
+  <meta name="description" content="Hi! My name's Faisal. I love Music. Welcome to my Website.">
+  <meta name="keywords" content="faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisal413,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
   <meta name="author" content="Md Faisal Hossain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FM my life Sound Cloud Music</title>
