--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Hi! My name's Faisal. I love Music. Welcome to my Website.">
-  <meta name="keywords" content="faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisal413,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
+  <meta name="keywords" content="music,online music,faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisal413,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
   <meta name="author" content="Md Faisal Hossain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FM my life Sound Cloud Music</title>
@@ -73,7 +73,7 @@
     </div>
     <div class="faisal">
       <center>
-        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisal413.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://www.privacypolicygenerator.info/live.php?token=Blc9xJfFxJV17NxeyJjbBqcx3gZleJxd"target="_blank"> PRIVACY POLICY | </a> <a href="https://faisal413.github.io/Contact/"target="_blank">CONTACT US | </a></span>
+        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisalhossain1.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://faisalhossain1.github.io/Contact/"target="_blank">CONTACT US | </a><a href="https://www.privacypolicygenerator.info/live.php?token=Blc9xJfFxJV17NxeyJjbBqcx3gZleJxd"target="_blank"> PRIVACY POLICY | </a> </span>
        © 2020-2021 All rights reserved.</span>
       </center>
     </div>
