--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     <div class="faisal">
       <center>
-        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisalhossain1.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://faisalhossain1.github.io/Contact/"target="_blank">CONTACT US | </a><a href="https://www.privacypolicygenerator.info/live.php?token=Blc9xJfFxJV17NxeyJjbBqcx3gZleJxd"target="_blank"> PRIVACY POLICY | </a> </span>
+        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisalhossain1.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://faisalhossain1.github.io/Contact/"target="_blank">CONTACT US | </a><a href="https://www.privacypolicygenerator.org/live.php?token=ZGmu5GbiNyFEPS5xnfglzGK7O9TIpfPl"> PRIVACY POLICY | </a> </span>
        © 2020-2021 All rights reserved.</span>
       </center>
     </div>
