--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Hi! My name's Faisal. I love Music. Welcome to my Website.">
-  <meta name="keywords" content="music,online music,faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisal413,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
+  <meta name="description" content="Hi! My name's Faisal. I love Music.">
+  <meta name="keywords" content="music,online music,faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
   <meta name="author" content="Md Faisal Hossain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FM my life Sound Cloud Music</title>
