--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="img/faisal.jpg" sizes="16x16" type="image/png">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
-<body onkeydown="return false" oncontextmenu="return false">
+<body>
   <div class="main">
   	<p id="logo"><i class="fa fa-music"></i>Music</p>
     
