--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="img/faisal.jpg" sizes="16x16" type="image/png">
+  <link rel="icon" href="logo-2.png" sizes="16x16" type="image/png">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
