--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="Hi! My name's Faisal. I love Music.">
-  <meta name="keywords" content="music,online music,faisalhossain1,soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisalhossain,mrfaisal,linkedinfaisal,faisal413,fmmylife,FM my life, fm my life, music, Music, AudioMusic, AudioPlayer,audiomudic,">
+  <meta name="keywords" content="soundcloud,faisal,Faisal,FaisalHossain,mdfaisal,MDFaisal,MDFaisalHoosain,www.mdfaisalhossain.com,faisalhossainmusic, Music, AudioMusic, AudioPlayer,audiomudic, nieix-music, nieix music">
   <meta name="author" content="Md Faisal Hossain">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FM my life Sound Cloud Music</title>
+  <title>Nieix Music - Official Sound</title>
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="main">
-  	<p id="logo"><i class="fa fa-music"></i>Music</p>
+  	<p id="logo"><i class="fa fa-music"></i>Nieix Music</p>
     
     <!--- left part --->
      <div class="left">
@@ -73,12 +73,12 @@
     </div>
     <div class="faisal">
       <center>
-        <span class="credit">MD.FAISAL HOSSAIN | </span><a href="https://faisalhossain1.github.io/profile/"target="_blank">ABOUT US | </a><a href="https://faisalhossain1.github.io/Contact/"target="_blank">CONTACT US | </a><a href="https://www.privacypolicygenerator.org/live.php?token=ZGmu5GbiNyFEPS5xnfglzGK7O9TIpfPl"> PRIVACY POLICY | </a> </span>
-       © 2020-2021 All rights reserved.</span>
+        <a href="https://www.youtube.com/channel/UCiZs4UiTs3H0IyRTEVNau3g"target="_blank">Nieix Music | </a>
+        <a href="https://faisalhossain1.github.io/profile/"target="_blank">Developed By Md Faisal Hossain. | </a><a href="https://faisalhossain1.github.io/Contact/"target="_blank">CONTACT US | </a></span>
+       © 2020-2022 All rights reserved.</span>
       </center>
     </div>
   </footer>
     <script src="script.js"></script>
 </body>
 </html>
-  
